<resources>
    <string name="app_name">Mapster</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="previous_search_1">First</string>
    <string name="previous_search_2">Second</string>
    <string name="previous_search_3">Thirds</string>
    <string name="previous_search_4">Fourth</string>
    <string name="previous_search_5">Fifth</string>

    <string-array name="building_list">
        <item>OR</item>
        <item>G8</item>
        <item>NI</item>
    </string-array>

    <string-array name="section_list">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
    </string-array>

    <string-array name="room_list">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="level_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
