<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="se.mah.mapster.mapster_05.MainActivity"
    tools:showIn="@layout/main_app_bar">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <!--<LinearLayout-->
    <!--android:id="@+id/searchInfo"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_below="@+id/imageView"-->
    <!--android:orientation="horizontal">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginRight="20dp"-->
    <!--android:text="Building" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginRight="20dp"-->
    <!--android:text="Section" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginRight="20dp"-->
    <!--android:text="Level" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:text="Room" />-->

    <!--</LinearLayout>-->

    <GridLayout
        android:id="@+id/searchGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:columnCount="5"
        android:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Building" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Section" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Level" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Room" />

        <Spinner
            android:id="@+id/buildingSpinner"
            android:layout_column="0"
            android:layout_row="1"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/sectionSpinner"
            android:layout_column="1"
            android:layout_row="1"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/levelSpinner"
            android:layout_column="2"
            android:layout_row="1"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/roomSpinner"
            android:layout_column="3"
            android:layout_row="1"
            android:spinnerMode="dropdown" />

        <!--   <Button
               android:id="@+id/search_Button"
               android:layout_width="50dp"
               android:layout_column="4"
               android:layout_row="1"
               android:drawableStart="@drawable/search_icon" />-->

    </GridLayout>

    <Button
        android:id="@+id/search_Button"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@+id/searchGrid"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_search_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/previous_search_scroll_view"
        android:layout_alignStart="@+id/previous_search_scroll_view"
        android:text="Previous Searches:" />

    <ScrollView
        android:id="@+id/previous_search_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/previous_search_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/previous_search_1" />

            <Button
                android:id="@+id/previous_search_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/previous_search_2" />

            <Button
                android:id="@+id/previous_search_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/previous_search_3" />

            <Button
                android:id="@+id/previous_search_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/previous_search_4" />

            <Button
                android:id="@+id/previous_search_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/previous_search_5" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
